# RobWork

./: .clang-format  .cmake-format  .gitignore  .gitlab-ci-common.yml  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  format-source.sh  grep.exe.stackdump
RobWork/: CMakeLists.txt  config.cmake.template
RobWork/cmake/: RobWorkBuildConfig.cmake.in  RobWorkConfig.cmake.in  RobWorkConfigMacros.cmake.in  RobWorkConfigVersion.cmake.in  RobWorkMacros.cmake  RobWorkSetup.cmake
RobWork/cmake/Modules/: FindAssimp.cmake  FindFCL.cmake  FindGTest.cmake  FindMathGL.cmake  FindQhull.cmake  FindRobWork.cmake  FindXercesC.cmake  FindYaobi.cmake
RobWork/example/: CMakeLists.txt
RobWork/example/bfgsApp/: CMakeLists.txt
RobWork/example/consoleapp/: CMakeLists.txt  SampleTest.cpp
RobWork/example/cpp/: CMakeLists.txt  ex-collisions.cpp  ex-find-from-workcell.cpp  ex-load-model.cpp  ex-motionplanning.cpp  ex-quaternion.cpp  ex_print-kinematic-tree.cpp  invkin.cpp
RobWork/example/lua/: ex-collisions.lua  ex-eaa.lua  ex-invkin.lua  ex-load-workcell.lua  ex-motionplanning.lua  ex-print-kinematic-tree.lua  ex-quaternion.lua  ex-rotation3d.lua  ex-rpy.lua  ex-world-transforms.lua  ex_frame-to-frame-transforms.lua  invkin.lua
RobWork/example/plugin/: CMakeLists.txt
RobWork/example/python/: ex-collisions.py  ex-eaa.py  ex-invkin.py  ex-load-workcell.py  ex-motionplanning.py  ex-quaternion.py  ex-rotation3d.py  ex-rpy.py  ex_find_from_workcell.py  ex_frame_to_frame_transform.py  ex_frame_to_frame_transforms.py  ex_fwd_kinematics.py  ex_fwd_kinematics_device.py  ex_movable_frame.py  ex_print_devices.py  ex_print_kinematic_tree.py  ex_trajectory.py  ex_world_transforms.py  invkin.py
RobWork/example/simplegui/: CMakeLists.txt  ViewerExample.cpp
RobWork/example/snippets/: CMakeLists.txt  ex-ik-reachable.cpp  ex-ik.cpp  ex-lua-interpreter.cpp  ex-owned-ptr.cpp  ex-print-kinematic-tree.cpp  ex-threadpool.cpp
RobWork/example/tutorial/: CMakeLists.txt  HelloWorld.cpp
RobWork/ext/: CMakeLists.txt
RobWork/ext/assimp/: CMakeLists.txt
RobWork/ext/csgjs/: CMakeLists.txt
RobWork/ext/fcl/: CMakeLists.txt
RobWork/ext/lua/: CMakeLists.txt
RobWork/ext/rwyaobi/: CMakeLists.txt
RobWork/ext/unzip/: CMakeLists.txt
RobWork/ext/zlib/: CMakeLists.txt
RobWork/gtest/: CMakeLists.txt  TestEnvironment.cpp
RobWork/gtest/algorithms/: RANSACTest.cpp
RobWork/gtest/common/: CommonTest.cpp  LogTestSuite.cpp  PluginTest.cpp  ProgramOptionTest.cpp  PropertyTest.cpp  SerializationTest.cpp  TestPlugin.cpp  ThreadTest.cpp  test_plugin.rwplugin.xml.in
RobWork/gtest/core/: EventTest.cpp  PropertyMapTest.cpp  PropertyTest.cpp  PropertyValueTest.cpp
RobWork/gtest/geometry/: GeometryTest.cpp  HyperSphereTest.cpp  IndexedTriMeshTest.cpp  Model3DTest.cpp  QHullTest.cpp  SimpleTriMeshTest.cpp  TriangleUtilTest.cpp  TriangulateTest.cpp
RobWork/gtest/graphics/: SceneGraphTest.cpp  WorkCellSceneTest.cpp
RobWork/gtest/invkin/: ClosedFormIKSolverURTest.cpp  InvKinTest.cpp
RobWork/gtest/kinematics/: KinematicsTest.cpp  StaticFrameGroupsTest.cpp
RobWork/gtest/loaders/: DOMPropertyMap.cpp  DOMProximitySetupSaver.cpp  ImageLoaderTest.cpp  PathLoaderCSVTest.cpp  TULLoaderTest.cpp  TrajectoryLoaderTest.cpp
RobWork/gtest/math/: EAATest.cpp  Pose6DTest.cpp  RPYTest.cpp  Rotation3DTest.cpp  UtilTest.cpp  Vector3DTest.cpp  VectorNDTest.cpp
RobWork/gtest/mathematica/: MathematicaTest.cpp
RobWork/gtest/models/: JointTest.cpp  ParallelDeviceTest.cpp  ParallelLegTest.cpp  SerialDeviceTest.cpp  WorkCellTest.cpp
RobWork/gtest/pathoptimization/: ClearanceOptimizerTest.cpp
RobWork/gtest/pathplanning/: PathPlanningTest.cpp
RobWork/gtest/plots/: MathGLPlotTest.cpp
RobWork/gtest/proximity/: BVTreeTest.cpp  CollisionStrategy.cpp  CollisionTest.cpp  CollisionToleranceStrategy.cpp  DistanceCalculatorTest.cpp  DistanceMultiStrategy.cpp  DistanceMultiStrategyTest.cpp  DistanceStrategy.cpp  DistanceStrategyTest.cpp  ProximityCalculatorTest.cpp  ProximityModel.cpp  ProximityStrategy.cpp  distanceStrategy.cpp
RobWork/gtest/task/: GraspTaskTest.cpp  TaskLoaderTest.cpp
RobWork/gtest/trajectory/: CubicSplineTest.cpp  PathTest.cpp
RobWork/src/: CMakeLists.txt  RobWorkConfig.hpp.in  RobWorkConfig.hpp.template
RobWork/src/rw/: CMakeLists.txt  RobWork.cpp  RobWork.hpp  geometry.hpp  graphics.hpp  graspplanning.hpp  invkin.hpp  kinematics.hpp  loaders.hpp  math.hpp  math_fwd.hpp  models.hpp  pathplanning.hpp  plugin.hpp  proximity.hpp  rw.hpp  sensor.hpp  trajectory.hpp
RobWork/src/rwlibs/: CMakeLists.txt  mathematica.hpp  task.hpp
RobWork/src/sandbox/: AsciiPathSaver.cpp  AsciiPathSaver.hpp  CMakeLists.txt  ClarkHullND.hpp  ConvertUtil.cpp  ConvertUtil.hpp  MovingAverage.hpp  NvStanHull3D.cpp  OBLSS.hpp  OBRSS.hpp  WrenchMeasure3D.cpp  WrenchMeasure3D.hpp
RobWork/test/: CMakeLists.txt  TestSuiteConfig.hpp.in  TestSuiteConfig.xml.in  test-main.cpp
RobWork/test/algorithms/: RANSACTest.cpp
RobWorkHardware/: CMakeLists.txt  config.cmake.template
RobWorkHardware/cmake/: RobWorkHardwareBuildConfig.cmake.in  RobWorkHardwareConfig.cmake.in  RobWorkHardwareConfigVersion.cmake.in
RobWorkHardware/example/: CMakeLists.txt
RobWorkHardware/src/: RobWorkHardwareConfig.hpp.in
RobWorkHardware/test/: CMakeLists.txt  TestSuite.cpp
RobWorkSim/: CMakeLists.txt
RobWorkSim/cmake/: RobWorkSimBuildConfig.cmake.in  RobWorkSimConfig.cmake.in  RobWorkSimSetup.cmake
RobWorkSim/example/: CMakeLists.txt
RobWorkSim/gtest/: CMakeLists.txt
RobWorkSim/src/: CMakeLists.txt  RobWorkSimConfig.hpp.in
RobWorkSim/test/: CMakeLists.txt  TestSuiteConfig.hpp.in  test-main.cpp
RobWorkStudio/: CMakeLists.txt  config.cmake.template
RobWorkStudio/cmake/: FindRobWorkStudio.cmake  RobWorkStudioBuildConfig.cmake.in  RobWorkStudioConfig.cmake.in  RobWorkStudioMacros.cmake  RobWorkStudioSetup.cmake
RobWorkStudio/example/: CMakeLists.txt
RobWorkStudio/ext/: CMakeLists.txt
RobWorkStudio/gtest/: CMakeLists.txt
RobWorkStudio/src/: CMakeLists.txt  RobWorkStudioConfig.hpp.in  main.cpp
RobWorkStudio/test/: CMakeLists.txt
(+2553 files in other folders)
